[package]
name = "liquidations-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["ws"] }
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["std", "derive", "serde_derive"] }
serde_json = "1.0.146"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
